--- a/ChowTime/Views/Base.lproj/Main.storyboard
+++ b/ChowTime/Views/Base.lproj/Main.storyboard
@@ -1,3 +1,3 @@
 version https://git-lfs.github.com/spec/v1
-oid sha256:3b2be17fc1d8e3267be8139c960c83b80a4ebe3268fbd53a671de23598712aa9
-size 1211129497
+oid sha256:af3488ec3321cf13c3f00cc829dd51c5f4cdfbbd9d246889135b16bf767add4b
+size 110201
